# mzml2isa

./: .gitignore  .travis.yml  .~lock.isa_new.txt#  CHANGELOG.md  ISA_tab.py  MANIFEST.in  README.md  README.rst  TODOLIST  __init__.py  appveyor.yml  i_investigation  isa_mzML.py  isa_new.txt  mzML.py  mzml_2_isa_tab.py  obo_parse.py  pymzml_obo_parse.py  requirements-py2-win.txt  requirements-py2.txt  requirements-win.txt  requirements.txt  setup.cfg  setup.py  sitecustomize.py  test.sh
.github/workflows/: package.yml  test.yml
archive/: isa_new.txt  mzML_meta_parse.R
ci/: requirements.txt
ci/appveyor/: hook-openpyxl.py  mzml2isa_cli.py  mzml2isa_cli.spec
ci/travis/: chandler.sh
default/: a_old.txt
example_files/: .mzml_studies.txt
example_files/MTBLS-json-meta/: MTBLS125-Mouse 01 blood control oral NEG.json  MTBLS126-Mouse 1 Blood HO control NEG.json  MTBLS127-C2C12 1 RESV 0uM NEG.json  MTBLS137-L001_Blank_RP_pos.json  MTBLS140-001_CRa_H9M5_M470_Blank_01_high_neg.json  MTBLS146-targeted_positive_lipid1_20121114_Lipid_1_A10_10.json  MTBLS227-37382-A03-1 SW620_01.json  MTBLS228-20131126_024_JM_BM_exp12-10-18_S1_0s.json  MTBLS229-20150813_092_JH_EC_exp15-07-29_fast_label_nLC_LTQ_s1_0sec.json  MTBLS233-001_CRa_H9M5_M470_Blank_01_alternate_neg.json  MTBLS235-detnoise_sigma0_PICKED.json  MTBLS253-1405CAB_0001_A1.json  MTBLS263-3injections_inj1_NEG.json  MTBLS264-Volunteer1_RBC_0h_NEG.json  MTBLS265-Person02_blood_youth_NEG.json  MTBLS266-Person01_plasma_youth_NEG.json  MTBLS267-Person01_RBC_youth_NEG.json  MTBLS277-001_CRa_H9M5_Blank_01_neg_high_mr.json  MTBLS28-20080809_NIH_EWY_POS_0008.json  MTBLS283-1358BZU_0001_A1.json  MTBLS291-Cel_1-A,8_01_21040.json  MTBLS297-LA 1777 Blatt sauer1.json  MTBLS315-1001_N.json  MTBLS316-20101205_01_2G_1_pos_35.json  MTBLS32-100609fluexpSET1-1.json  MTBLS341-neg-Exp1-Blatt_K-1_1-B,1_01_8102.json  MTBLS354-Case100_neg.json  MTBLS359-0min_no_bacteria_rep1.json  MTBLS36-20100917_01_TomQC.json  MTBLS370-CAC1.json  MTBLS376-Clea10_a.json  MTBLS38-(-)-epigallocatechin.json  MTBLS380-WB_ASWAT_06_03_12_POS_01.json  MTBLS401-Albendazole_B3_Rep1.json  MTBLS404-Blanc04.json  MTBLS434-01_15_A_1.json  MTBLS449-13047AHQ_0001_A1.json  MTBLS483-070120_CM_neg_15min_SIN_I.json  MTBLS492-150920_TS_neg_10A_18h.json  MTBLS520-neg_01_Fistax_1-A,2_01_5715.json  (+6 more)
isa_config/isaconfig-2015714/: metaboliteprofiling_ms.xml  metaboliteprofiling_nmr.xml
mzml2isa/: __init__.py  __main__.py  _fs.py  _impl.py  imagingMS.obo  imzml.py  isa.py  meta_collectors.py  mzml.py  obo.py  parsing.py  usermeta.py  utils.py  versionutils.py
mzml2isa.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mzml2isa/default/: a_imzML.txt  a_mzML.txt  a_mzML_parse.txt  i_Investigation.txt  i_imzML.txt  i_mzML.txt  s_imzML.txt  s_mzML.txt  s_mzML_parse.txt
mzml2isa/templates/: a_mzML.txt  (+6 more)
mzml_2_isa/: __init__.py  isa.py  mzml.py  mzml_2_isa_tab.py  mzmlxxxx.py
out_folder/: i_investigation.txt~
scripts/: examples.py  examples.py~  get-isa-configuration.py  metabolights-dl.py  metabolights.py  metabolights.sh  mtbls_builds.txt  mtbls_single_data_files.py  mzml2isa_parser.py  mzml_2_isa_parser.py  mzml_2_isa_tab.py  validate.py
testing/: .~lock.a_ideal.txt#  a_ap_amp1_amd_metabolite_profiling_mass_spectrometry.txt  a_ideal.txt  mzML_meta.json  steffen_script.R  xslt_xml.py
tests/: __init__.py  _utils.py  requirements.txt  test_examples.py  test_mtbls.py  utils.py
(+24 files in other folders)
