[metadata]
license_file = COPYING

[coverage:report]
show_missing = true
exclude_lines =
	pragma: no cover
	if typing.TYPE_CHECKING:
	@abc.abstractmethod
	@abc.abstractproperty
	raise NotImplementedError
	return NotImplemented

[green]
file-pattern = test_*.py
verbose = 2
no-skip-report = true
quiet-stdout = true
run-coverage = true

[pydocstyle]
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false
ignore = D200, D203, D213, D406, D407   # Google conventions

[flake8]
max-line-length = 99
doctests = True
exclude = .git, .eggs, __pycache__, tests/, docs/, build/, dist/, setup.py
ignore = D200, D203, D213, D406, D407   # Google conventions
