[metadata]
name = mzml2isa
version = attr: mzml2isa.__version__
author = Tom Lawson, Martin Larralde
author-email = tnl495@bham.ac.uk
home-page = https://github.com/ISA-tools/mzml2isa
description = mzML file parser and converter to ISA-Tab
long-description = file: README.rst
license = GPLv3
license_file = COPYING
platform = any
keywords = metabolomics, mass spectrometry, metabolites, ISA Tab, mzML, parser
classifiers =
	Intended Audience :: Science/Research
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Topic :: Text Processing :: Markup :: XML
	Topic :: Scientific/Engineering :: Bio-Informatics
	Topic :: Scientific/Engineering :: Chemistry
	Topic :: Utilities
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Operating System :: OS Independent
project_urls =
	Bug Reports = https://github.com/ISA-tools/mzml2isa/issues
	Documentation = http://2isa.readthedocs.io/en/latest/mzml2isa/
	Changelog = https://github.com/ISA-tools/mzml2isa/blob/master/CHANGELOG.md

[options]
zip_safe = true
include_package_data = false
python_requires = >= 2.7, != 3.0.*, != 3.1.*, != 3.2.*, != 3.3.*
packages = mzml2isa, mzml2isa.templates, mzml2isa.ontologies
test_suite = tests
test_runner = green
setup_requires =
	setuptools >=36.7
tests_require =
	parameterized ~=0.6
	isatools ~=0.10         ; python_version > '2'
        fs.archive[tar.xz] ~=0.5
install_requires =
	cached-property ~=1.4
	fs ~=2.1.0
	pronto ~=0.10.0
	six ~=1.11
	openpyxl ~=2.5
	lxml ~=4.2              ; python_version < '3'

[options.extras_require]
pb =
	tqdm ~=4.25


[options.package_data]
* = COPYING
mzml2isa.templates = *.txt
mzml2isa.ontologies = *.obo

[bdist_wheel]
universal = true

[check]
metadata = true
restructuredtext = true
strict = true

[sdist]
formats = zip

[coverage:report]
show_missing = true
exclude_lines =
	pragma: no cover
	if typing.TYPE_CHECKING:
	@abc.abstractmethod
	@abc.abstractproperty
	raise NotImplementedError
	return NotImplemented

[green]
file-pattern = test_*.py
verbose = 2
no-skip-report = true
quiet-stdout = true
run-coverage = true

[pydocstyle]
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false
ignore = D200, D203, D213, D406, D407   # Google conventions

[flake8]
max-line-length = 99
doctests = True
exclude = .git, .eggs, __pycache__, tests/, docs/, build/, dist/, setup.py
ignore = D200, D203, D213, D406, D407, E501, Q000   # Google / Black conventions
